--- a/public/index.html
+++ b/public/index.html
@@ -13,10 +13,13 @@
 			<script src="libs/angular/angular.min.js"></script>
 			<script src="libs/angular-route/angular-route.min.js"></script>
 			<!-- ANGULAR CUSTOM -->
+
 			<script src="js/app.js"></script>
+			<script src="js/services/AuthService.js"></script>
 			<script src="js/controllers/adminCtrl.js"></script>
 			<script src="js/controllers/homeCtrl.js"></script>
 			<script src="js/services/surveyService.js"></script>
+
 		</head>
 		<body style="background-color:#6152bc" ng-app="SurveyApp" ng-controller="homeController">
 			<!-- HEADER -->
@@ -25,7 +28,7 @@
 					<a class="navbar-brand" href="/">Sumo Survey</a>
 				</div>
 				<ul class="nav navbar-nav pull-right">
-		            <li><a href="/admin" style="color:#4a5e9b">Login</a></li>
+		            <li><a href="/admin" style="color:#4a5e9b">Admin</a></li>
 		        </ul>
 			</nav>
 			<div class="container">
